--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
   </head>
   <body>
     <section class="registration-page">
-      <form action="#" class="sign-up">Registration Form</form>
+      <form action="#" class="sign-up">
+        <div class="form-header">
+          <h1>Create Account</h1>
+        </div>
+        <div class="form-body">
+          <div class="row">
+            <div class="input-group">
+              <label>First Name</label>
+              <input type="text" placeholder="Enter your first name" />
+            </div>
+            <div class="input-group">
+              <label>Last Name</label>
+              <input type="text" placeholder="Enter your last name" />
+            </div>
+          </div>
+        </div>
+      </form>
     </section>
   </body>
 </html>
