--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
               <input type="text" placeholder="Enter your last name" />
             </div>
           </div>
+          <div class="row">
+            <div class="input-group">
+              <label for="email"> Email </label>
+              <input type="email" placeholder="Enter your email address" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-group">
+              <label for="user-password">Password</label>
+              <input
+                type="password"
+                id="user-password"
+                placeholder="Enter you possword"
+              />
+            </div>
+            <div class="input-group">
+              <label for="user-confirm-psswrd">Confirm Password</label>
+              <input
+                type="password"
+                id="user-confirm-psswrd"
+                placeholder="Enter your password again."
+              />
+            </div>
+          </div>
         </div>
       </form>
     </section>
