feat: added ratio and checkbox
Added ratio and checkbox in form.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,56 @@
               />
             </div>
           </div>
+          <!--radio & checkbox section-->
+          <div class="row">
+            <div class="input-group">
+              <label for="user-gender">Gender </label>
+              <!-- radio-group started -->
+              <div class="radio-group">
+                <div>
+                  <label for="male">
+                    <input type="radio" name="gender" id="male" />
+                    Male
+                  </label>
+                </div>
+                <div>
+                  <label for="female">
+                    <input type="radio" name="gender" id="female" />
+                    Female
+                  </label>
+                </div>
+                <div>
+                  <label for="other">
+                    <input type="radio" name="gender" id="other" />
+                    Other
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="input-group">
+              <label for="hobbies"> Hobbies </label>
+              <div class="checkbox-group">
+                <div>
+                  <label for="cooking">
+                    <input type="checkbox" name="hobbies" id="cooking" />
+                    Cooking
+                  </label>
+                </div>
+                <div>
+                  <label for="reading">
+                    <input type="checkbox" name="hobbies" id="reading" />
+                    Reading
+                  </label>
+                </div>
+                <div>
+                  <label for="playing">
+                    <input type="checkbox" name="hobbies" id="playing" />
+                    Football
+                  </label>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </form>
     </section>
