--- a/index.html
+++ b/index.html
@@ -98,8 +98,34 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="input-group">
+              <label for="">Source of Income</label>
+              <select>
+                <option>Employed</option>
+                <option>Self-Employed</option>
+                <option>Unemployed</option>
+              </select>
+            </div>
+            <div class="input-group">
+              <label for="income">Income</label>
+              <div class="range-group">
+                <input
+                  type="range"
+                  name="income"
+                  id="range-update"
+                  min="20"
+                  max="200"
+                  value="20"
+                  step="5"
+                />
+                <label id="update">20K</label>
+              </div>
+            </div>
+          </div>
         </div>
       </form>
     </section>
+    <script src="/src/index.js"></script>
   </body>
 </html>
