--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="input-group">
+              <label for="file">Upload Profile Picture</label>
+              <input type="file" id="file" name="profile-picture" value="pnj" />
+            </div>
+            <div class="input-group">
+              <label for="age">Age</label>
+              <input type="number" id="age" name="age" />
+            </div>
+          </div>
         </div>
       </form>
     </section>
