--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
               <input type="number" id="age" name="age" />
             </div>
           </div>
+          <div class="row">
+            <div class="input-group">
+              <label for="bio">Bio</label>
+              <textarea name="bio" id="bio"></textarea>
+            </div>
+          </div>
+          <div class="form-footer">
+            <button class="btn">Create</button>
+          </div>
         </div>
       </form>
     </section>
